--- a/block-BJaair/code/stylesheet/style.css
+++ b/block-BJaair/code/stylesheet/style.css
@@ -128,80 +128,63 @@ table {
   border-spacing: 0;
 }
 
-/* Custom style */
+/* Border-Box  */
 
-/* Border-box  */
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
 
+/*  Custom Styles  */
+
+body {
+  font-family: sans-serif;
+  background-color: #f1deb8;
+}
 header {
-  text-align: center;
   font-size: 48px;
-  background-color: rgb(95, 89, 89);
-  color: whitesmoke;
-  padding: 12px;
+  font-weight: 700;
+  padding: 24px;
+  background-color: #ccc;
+  text-align: center;
 }
 
-.primary_section {
-  max-width: 80%;
-  margin: 0 auto;
-  padding: 16px;
-  background-color: #f1deb7;
-}
-
-.form {
-  max-width: 40%;
+.root {
   padding: 32px;
-  margin: 0 auto;
-  border: 3px solid rgb(102, 85, 234);
-}
-.form input {
-  display: block;
-  padding: 8px;
-  width: 100%;
-  margin: 12px 0;
-}
-.form input[type="submit"] {
-  background-color: rgb(95, 89, 89);
-  border: none;
-  color: whitesmoke;
-}
-
-.card_container {
-  margin: 32px;
   display: flex;
   flex-wrap: wrap;
 }
-.cards {
-  width: 30%;
-  margin: 16px;
-  display: flex;
-  flex-direction: column;
-  border: 1px solid black;
-  background-color: #ee6c52;
+.root li {
+  background-color: #ff614a;
+  padding: 8px 16px;
+  flex-basis: 22%;
+  margin: 20px;
+
+  border: 2px solid black;
+}
+.root li p {
+  text-decoration: underline;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+.root li h2 {
+  font-size: 20px;
+  margin-top: 16px;
+  text-transform: capitalize;
+}
+.form {
+  max-width: 24%;
+  margin: 0 auto;
+  padding: 24px;
+  border: 2px solid rgb(63, 92, 124);
 }
 
-.cards input {
+.form input {
   display: block;
+  height: 32px;
   padding: 8px;
   width: 100%;
-  height: 32px;
-  margin: 6px 0;
   font-size: 16px;
-  text-decoration: underline;
-  border: none;
-  outline: none;
-  background-color: #ee6c52;
-}
-.cards .title {
-  text-decoration: none;
-  font-size: 20px;
-  order: 10;
-}
-.cards input:hover {
-  outline: 1px black solid;
-  background-color: aliceblue;
+  margin-bottom: 16px;
 }
